--- a/.github/linters/.prettierignore
+++ b/.github/linters/.prettierignore
@@ -9,5 +9,11 @@ coverage
 .mypy_cache/
 .build
 .terraform
+.github/linters/.cache/*
+.cache/*
+terraform.md
 *.tpl.md
 *.enc.yaml
+vendor
+out
+.vscode-test
