--- a/package.json
+++ b/package.json
@@ -1,72 +1,69 @@
 {
-  "name": "terraform-gitlab-project",
+  "name": "@hadenlabs/terraform-gitlab-project",
   "version": "0.2.0",
-  "description": "terraform gitlab project",
-  "repository": "ssh://git@github.com/hadenlabs/terraform-gitlab-project.git",
+  "description": "terraform-gitlab-project",
   "author": "Luis Mayta <slovacus@gmail.com>",
-  "license": "MIT",
+  "license": "LGPL-3.0",
   "engines": {
     "node": ">=14"
   },
-  "keywords": [],
   "scripts": {
-    "build": "./node_modules/.bin/tsc -p",
-    "build:tool": "yarn run build ./tools/",
+    "build": "tsc -p ./",
     "clean": "rimraf -rf dist",
     "clean:all": "yarn clean:cache && yarn clean:build:all && yarn clean node_modules",
     "clean:build": "yarn clean dist .next out .serverless_nextjs",
-    "clean:build:all": "yarn clean && yarn clean:build && yarn clean:build:tool && yarn clean:build:test",
+    "clean:build:all": "yarn clean && yarn clean:build && yarn clean:build:test",
     "clean:build:test": "yarn clean ./coverage",
-    "clean:build:tool": "yarn clean ./build/tools",
     "clean:cache": "yarn clean ./node_modules/.cache",
+    "plop": "cross-env TS_NODE_PROJECT='./provision/generators/plop/ts-node.tsconfig.json' plop --plopfile provision/generators/plop/index.ts",
     "lint": "eslint --config=.github/linters/.eslintrc.js --ignore-path=.github/linters/.eslintignore ./ --ext .js,.jsx,.mjs,.d.ts,.ts,.tsx",
     "lint:fix": "yarn lint --fix",
     "lint:less": "stylelint --config=.github/linters/.stylintrc --syntax less **/*.less",
     "lint:less:fix": "yarn lint:less --fix",
-    "prebuild": "yarn run clean",
-    "precommit": "lint-staged",
-    "prettier": "prettier --config=.github/linters/prettier.config.js --ignore-path=.github/linters/.prettierignore",
+    "ncu": "ncu -u --target minor",
+    "ncu:patch": "ncu -u --target patch",
+    "prebuild": "mkdirp build && yarn run clean:build:all",
+    "prettier": "prettier --config=.github/linters/prettier.config.js --ignore-path=.github/linters/.prettierignore --list-different",
     "prettier:fix": "yarn prettier:lint --write=true",
-    "prettier:lint": "yarn prettier '**/*.{js?(on),ts?(x),scss,md,y?(a)ml,gql,graphql?(s),less,mjml}' --write=false --list-different"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.13.10",
-    "@commitlint/cli": "^12.0.1",
-    "@hadenlabs/commitlint-config": "^0.1.0",
-    "@types/jest": "^26.0.21",
-    "@types/mocha": "^8.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "axios": "^0.21.1",
-    "babel-cli": "^6.26.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.3.1",
-    "husky": "^5.1.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "prettier-tslint": "^0.4.2",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^17.4.2",
-    "shelljs": "^0.8.4",
-    "stylelint": "^13.12.0",
-    "stylelint-config-standard": "^21.0.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "prettier:lint": "yarn prettier '**/*.{js?(on),ts?(x),scss,md,y?(a)ml,gql,graphql?(s),less,mjml}' --write=false"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
-  "prettier": "./.github/linters/prettier.config.js",
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn precommit",
-      "commit-msg": "commitlint --config=.github/linters/.commitlintrc.json -E HUSKY_GIT_PARAMS"
-    }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hadenlabs/terraform-gitlab-project.git"
   },
-  "stylintrc": ".github/linters/.stylintrc"
+  "keywords": [
+    "hadenlabs",
+    "template",
+    "base",
+    "tool"
+  ],
+  "bugs": {
+    "url": "https://github.com/hadenlabs/terraform-gitlab-project/issues"
+  },
+  "homepage": "https://github.com/hadenlabs/terraform-gitlab-project#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/rimraf": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-promise": "^5.1.0",
+    "node-plop": "^0.26.2",
+    "plop": "^2.7.4",
+    "prettier": "^2.3.2",
+    "prettier-eslint": "^12.0.0",
+    "slugify": "^1.5.3",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
+  },
+  "prettier": "./.github/linters/prettier.config.js"
 }
