--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-files = package.json provision/generators/README.yaml example/main.tf docs/examples/common.md
+files = package.json provision/generators/README.yaml docs/examples/common.md
 commit = False
 tag = False
 current_version = 0.2.0
@@ -17,10 +17,6 @@ search = {current_version}
 replace = {new_version}
 
 [bumpversion:file:docs/examples/common.md]
-search = {current_version}
-replace = {new_version}
-
-[bumpversion:file:example/main.tf]
 search = {current_version}
 replace = {new_version}
 
