refactor: dependencies versions standard (#23)

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,10 @@ replace = {new_version}
 search = {current_version}
 replace = {new_version}
 
+[bumpversion:file:internal/version/version.go]
+search = {current_version}
+replace = {new_version}
+
 [bumpversion:file:provision/generators/README.yaml]
 search = {current_version}
 replace = {new_version}
